   * Minor UI improvements for nOCR character inspect
   * Add "Clear" to "File - Recent files" - thx Dominiquini/OmrSi
   * Make bd sup edit work better with full frame images - thx peter-qgd
   * Point sync now also works on original subtitle - thx Rene
   * Keep Text box height when resizing - thx AbsenceJam/darnn
   * Add "Slovenian" to language auto detect - thx Milenko
* FIXED:
   * Fix for reading bdsup position - thx akaicat
   * Fix a few crashes in translation engine - thx howblast/Laís
   * Fix mpv dll loading from a folder with e.g. cyrillic chars - thx Zoran
   * Fix for EBU time code writing - thx milenko
   * Fix show (correct) EBU properties for current file - thx Emilien
   * Fix non-ASCII chars when enc 20269 is unavailable (Linux) - thx jason
   * Fix a crash in RTL when activating syntax coloring - thx OmrSi
   * Fix auto translate shortcut - thx xmrea
   * Some fixes for editing source view - thx PreetM07
   * Fix bug converting vtt two line color text to srt
   * Fix FCE issue w missing spaces/French language - thx  kyrpasto/OmrSi
   * Fix crash in karoke/typewriter effect due to invalid color - thx PM
   * Fix spell check replace with Unicode hidden spaces - thx zildan 
   * Netflix quality check - use current frame rate - thx Filip


3.6.0 (18th February 2021)
* NEW:
   * Use dotnet framework 4.7.2 (WinXP/Vista no longer supported)
   * Add edit/sync of bdsup with position - thx von Suppé/Janusz
   * Add internal store for ASSA styles - thx Leon/z3us
   * Add dark theme - thx OmrSi/dvjrickkraft/MuhammadiJK
   * Add copy-paste translate
   * Add "Delete lines" to "Batch convert" - thx Milenko
   * Add two new sub formats - thx Matthew
   * Add new ttml/dfxp variant - thx Mikhail
   * Add shortcut "Set start and set end of previous" - thx Jeff
   * Add shortcut "Play from beginning of video" - thx Kimberly
   * Add shortcut for toggle casing - thx LeonCheung
   * Add shortcut toggle focus between list view/waveform - thx OmrSi